# hike_grid

./: README.md
log/: latest_list
scripts/: platformio.ini
scripts/lib/ros_communication/: ros_communication.cpp
src/trailblazer_bringup/: README.md  package.xml
src/trailblazer_bringup/launch/: all_lidar_viz.launch.py  trailblazer_viz.launch.py  urdf_robot_no_viz.launch.py
src/trailblazer_bringup/launch/real_robot/: all.launch.py  all_lidar_wall_follower.launch.py  anatolian_searching_sequencer.launch.py  anatolian_tasks_sequencer.launch.py  ldlidar_bringup.launch.py  multiple_cam_all.launch.py  oak_detection.launch.py  slam_robot.launch.py
src/trailblazer_bringup/launch/simulation/: ekf_gazebo_robot.launch.py  gazebo_robot.launch.py  nav2_gazebo_robot.launch.py  slam_gazebo_robot.launch.py
src/trailblazer_cloud/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
src/trailblazer_cloud/launch/: depthai.launch.py  stereo_inertial_node.launch.py
src/trailblazer_cloud/params/: champ_nav2_params.yaml  multicam_example.yaml  trailblazer_rgbd_nav2_params.yaml
src/trailblazer_cloud/rviz/: stereoInertial.rviz  stereoInertialDepthAlignROS2.rviz
src/trailblazer_cloud/src/: backup_stereo_inertial_publisher.cpp  mag_stereo_inertial_publisher.cpp  stereo_inertial_publisher.cpp
src/trailblazer_nav2/: README.md  package.xml  setup.py
src/trailblazer_nav2/config/: demo_waypoints.yaml  dual_ekf_navsat_params.yaml  empty_map.pgm  empty_map.yaml  gps_wpf_demo.mvc  map_server.yaml  nav2_params real_robot.yaml  nav2_params.yaml  trailblazer_rgbd_nav2_params.yaml
src/trailblazer_nav2/launch/: dual_ekf_navsat.launch.py  map_server.launch.py  mapviz.launch.py  navigation_launch.py
src/trailblazer_nav2/trailblazer_nav2/: gps_navigator.py  gps_waypoint_logger.py  interactive_waypoint_follower.py  logged_waypoint_follower.py
src/trailblazer_planner/: CMakeLists.txt  README.md  package.xml
src/trailblazer_planner/launch/: anatolian_tasks.launch.py  driving_to_aruco_deactivate.launch.py  wall_follower_activate.launch.py  wall_follower_deactivate.launch.py
src/trailblazer_planner/scripts/: anatolian_sequencer_aruco_search.py  anatolian_service_sequencer.py  wall_follower.py
src/trailblazer_rviz/: setup.py
src/trailblazer_rviz/config/: nav2.rviz
